--- a/sol_app/templates/sol_app/sol_lista.html
+++ b/sol_app/templates/sol_app/sol_lista.html
@@ -3,8 +3,11 @@
 Lista de Solicitações
 {% endblock %}
 {% block content %}
-<h1>Solicitações</h1>
+<div class="row text-center mt-2">
+    <h4>Lista de Solicitações</h4>
+</div>
 <ul>
+    {% if object_list %}
     <table class="table table-striped">
         <thead>
             <tr>
@@ -16,10 +19,10 @@ Lista de Solicitações
                 <th>Setor</th>
                 <th>Equipe</th>
                 <th colspan="3" class="text-center">Ação</th>
-
             </tr>
         </thead>
         <tbody>
+            {%endif%}
             {% for solicitacao in object_list %}
             <tr>
                 <td>{{solicitacao.tipoos}}</td>
@@ -31,19 +34,25 @@ Lista de Solicitações
                 <td>{{solicitacao.nome_equipe}}</td>
                 <td> <a href="{% url 'sol_detalhe' solicitacao.id %}" class="btn btn-outline-primary btn-sm">Exibir</a>
                 </td>
-                <td> <a href="{% url 'sol_form_editar' 'editar' solicitacao.id %}" class="btn btn-outline-primary btn-sm">Editar</a>
+                <td> <a href="{% url 'sol_form_editar' 'editar' solicitacao.id %}"
+                        class="btn btn-outline-primary btn-sm">Editar</a>
                 </td>
                 <td> <a href="{% url 'sol_delete' solicitacao.id %}" class="btn btn-outline-danger btn-sm">Excluir</a>
                 </td>
             </tr>
             {% empty %}
-            <li>Nenhuma Solicitação ainda. <a href="{% url 'sol_record_form'%}">Nova Solicitação</a> </li>
-            <a href="{% url 'sol_record_form'%}">Nova Solicitação</a>
+            <div class="mb-3 mt-3">
+                Nenhuma Solicitação ainda.
+            </div>
+            <div>
+                <a href="{% url 'sol_record_form'%}">Nova Solicitação</a> </li>
+            </div>
+            </div>
             {%endfor%}
         </tbody>
     </table>
+    {% if object_list %}
     <div class="row">
-
         <nav class="Page navigation example">
             <ul class="pagination justify-content-end">
                 <li class="page-item">
@@ -68,14 +77,15 @@ Lista de Solicitações
                 </li>
             </ul>
         </nav>
-
     </div>
-   
+    {%endif%}
+    {% if object_list %}
     <form action="{% url 'sol_record_form' %}" method="get">
         {% csrf_token %}
         <p>
-            <td> <button type="submit" class="btn btn-primary mt-3 btn-sm">Nova Solicitação</a></td>
+            <td> <button type="submit" class="btn btn-primary mt-3 p-1 btn-sm">Nova Solicitação</a></td>
         </p>
     </form>
+    {%endif%}
 </ul>
 {% endblock %}
