Retirado tramitação do navbar.

--- a/web_project/templates/web_project/base.html
+++ b/web_project/templates/web_project/base.html
@@ -18,7 +18,8 @@
                 <div class="container-fluid">
                 <a href="{% url 'dashboard' %}" class="nvbar-brand text-light"  style="text-decoration: none;">Dashboard</a>
                 <a href="{% url 'sol_list' %}" class="nvbar-brand text-light"  style="text-decoration: none;">Solicitação</a>
-                <a href="#" class="nvbar-brand text-light"  style="text-decoration: none;">Tramitação</a>
+                <!--  <a href="#" class="nvbar-brand text-light"  style="text-decoration: none;">Tramitação</a>                                      -->
+               
                 <a href="{% url 'evento_lista' %}" class="nvbar-brand text-light"  style="text-decoration: none;">Eventos</a>
                 <a href="{% url 'lista_historico' %}" class="nvbar-brand text-light"  style="text-decoration: none;">Consultas</a>
                 <a href="{% url 'cadastros_lista' %}" class="nvbar-brand text-light"  style="text-decoration: none;">Cadastros</a>
