--- a/cadastro_app/templates/cadastro_app/cadastro_lista.html
+++ b/cadastro_app/templates/cadastro_app/cadastro_lista.html
@@ -8,11 +8,11 @@ Lista_Cadastro
     <div class="list-group  list-group-flush">
         <a href="{% url 'cargos'%}" class="list-group-item list-group-item-action">Cargos</a>
         <a href="{% url 'eventos' %}" class="list-group-item list-group-item-action">Eventos</a>
-        <a href="{% url 'fases'%}" class="list-group-item list-group-item-action">Fases</a>
+        <!--            <a href="{% url 'fases'%}" class="list-group-item list-group-item-action">Fases</a>                -->
+       <!--   <a href="{% url 'subfases'%}" class="list-group-item list-group-item-action">Subfases</a>             -->
         <a href="{% url 'funcionarios' %}" class="list-group-item list-group-item-action">Funcionários</a>
         <a href="{% url 'regioes'%}" class="list-group-item list-group-item-action">Regiões</a>
         <a href="{% url 'setores' %}" class="list-group-item list-group-item-action">Setores</a>
-        <a href="{% url 'subfases'%}" class="list-group-item list-group-item-action">Subfases</a>
         <a href="{% url 'tipodoc'%}" class="list-group-item list-group-item-action">Tipos de Documentos</a>
         <a href="{% url 'tiposos'%}" class="list-group-item list-group-item-action">Tipos de Obra ou Serviço</a>
       </div>
