--- a/sol_app/templates/sol_app/sol_detail.html
+++ b/sol_app/templates/sol_app/sol_detail.html
@@ -86,6 +86,12 @@ Detalhe
           <dd class="col">{{solicitacao.nome_equipe}}</dd>
         </span>
       </div>
+      <div class="col-4">
+        <dt class="col">Status</dt>
+        <span>
+          <dd class="col">{{solicitacao.get_status_display}}</dd>
+        </span>
+      </div>
     </div>
 <div class="row text-center mt-5">
   <div class="col">
