--- a/sol_app/templates/sol_app/sol_form.html
+++ b/sol_app/templates/sol_app/sol_form.html
@@ -4,7 +4,7 @@
 Solicitação
 {% endblock %}
 {% block content %}
-<h5 class="pt-5 text-center pb-3">Edição de Solicitação</h5>
+<h5 class="pt-5 text-center pb-3">{{tipo_solicitacao}} Solicitação</h5>
 <form method="POST">
   <div class="class card">
     <div class="card-header">
