--- a/web_project/templates/web_project/base.html
+++ b/web_project/templates/web_project/base.html
@@ -9,7 +9,18 @@
     {% bootstrap_css %}
     {% bootstrap_javascript %}
     {% load crispy_forms_tags %}
-    <script src="{% static 'admin/js/vendor/jquery/jquery.min.js' %}"> </script>
+    <!-- 
+
+<script src="{% static 'admin/js/vendor/jquery/jquery.min.js' %}"> </script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/i18n/jquery-ui-i18n.min.js"></script>
+    -->
+ 
+
+<!-- Inclui o arquivo de localização do jQuery UI para português -->
+
 </head>
 <body>
 
@@ -32,6 +43,7 @@
 
             <div class="body-content">
             {% block content %}
+
             {% endblock %}
              </div>
 
