--- a/dashboard_app/templates/dashboard/dashboard.html
+++ b/dashboard_app/templates/dashboard/dashboard.html
@@ -3,15 +3,12 @@
 {% block title %}
 Dashboard
 {% endblock %}
-<!--                     -->
-
 <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script> -->
-<!--  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>                   -->
- 
+<!--  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>    
 <script type="text/javascript" src="{% static 'js/Chart.min.js' %}"></script>
-
-
+--> 
 {% block content %}
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
 <div class="container">
 <div class="row d-flex justify-content-end mt-2">
 {% if user.is_authenticated %}
@@ -21,14 +18,13 @@ Dashboard
  {% endif %}
 </div>
 <div class="row">
-
 <div class="row">
     <div class="col-4 pt-3">
       <p>
         Solicitações ativas: {{total_solicitacoes}}
  </p>
         <canvas id="pie-chart" width="500" height="500"></canvas>
-       <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
+  
         <script>
             var config = {
               type: 'doughnut',
@@ -54,24 +50,8 @@ Dashboard
     </div>
     <div class="col-4 pt-3 ml-3" >
  Total de Nova Edificação : {{total_tipoos}}
-
     </di>
 </div>
-<p>
-    
-</p>
- 
-   
 </div>
-
-
-
-
-
-
-
-
 </div>
-
-
 {% endblock %}
