--- a/evento_app/templates/evento_app/modal.html
+++ b/evento_app/templates/evento_app/modal.html
@@ -1,8 +1,14 @@
 
 {% extends "web_project/base.html" %}
+{% load static %}
 {% block title %}
 {% endblock %}
 {% block content %}
+<script src="{% static 'admin/js/vendor/jquery/jquery.min.js' %}"> </script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/i18n/jquery-ui-i18n.min.js"></script>
 {% if sucesso_enviar %}
   <script type="text/javascript">
     $(document).ready(function(){
@@ -10,19 +16,18 @@
     });
   </script>
 {% endif %}
-
 <div class="modal" id="modal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">{{nome_formulario}} de Evento</h5>
+        <h5 class="modal-title">{{nome_formulario}} de {{tipo_cadastro}}</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <p>Registro {{tipo_acao}} com sucesso.</p>
       </div>
       <div class="modal-footer">
-        <a href="{%url 'evento_lista'%}" type="button" class="btn btn-secondary" >Close</a>
+        <a href="{%url nome_url %}" type="button" class="btn btn-secondary">Fechar</a>
         <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
       </div>
     </div>
