--- a/sol_app/templates/sol_app/sol_lista.html
+++ b/sol_app/templates/sol_app/sol_lista.html
@@ -28,7 +28,7 @@ Lista de Solicitações
                 <td>{{solicitacao.tipoos}}</td>
                 <td>{{solicitacao.nome_referencia}}</td>
                 <td>{{solicitacao.doc_sol}}</td>
-                <td>{{solicitacao.data_sol}}</td>
+                <td>{{solicitacao.data_sol |date:"SHORT_DATE_FORMAT" }}</td>
                 <td>{{solicitacao.regiao}}</td>
                 <td>{{solicitacao.setor}}</td>
                 <td>{{solicitacao.nome_equipe}}</td>
