--- a/web_project/templates/web_project/base.html
+++ b/web_project/templates/web_project/base.html
@@ -9,58 +9,39 @@
     {% bootstrap_css %}
     {% bootstrap_javascript %}
     {% load crispy_forms_tags %}
-    <!-- 
-
-<script src="{% static 'admin/js/vendor/jquery/jquery.min.js' %}"> </script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/i18n/jquery-ui-i18n.min.js"></script>
-    -->
- 
-
-<!-- Inclui o arquivo de localização do jQuery UI para português -->
-
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 </head>
+
 <body>
-
     <div class="container mt-2">
-            <nav class="navbar navbar-expand-lg navbar-light bg-secondary ">
-                <div class="container-fluid">
-                <a href="{% url 'dashboard' %}" class="nvbar-brand text-light"  style="text-decoration: none;">Dashboard</a>
-                <a href="{% url 'sol_list' %}" class="nvbar-brand text-light"  style="text-decoration: none;">Solicitação</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-secondary ">
+            <div class="container-fluid">
+                <a href="{% url 'dashboard' %}" class="nvbar-brand text-light"
+                    style="text-decoration: none;">Dashboard</a>
+                <a href="{% url 'sol_list' %}" class="nvbar-brand text-light"
+                    style="text-decoration: none;">Solicitação</a>
                 <!--  <a href="#" class="nvbar-brand text-light"  style="text-decoration: none;">Tramitação</a>                                      -->
-               
-                <a href="{% url 'evento_lista' %}" class="nvbar-brand text-light"  style="text-decoration: none;">Eventos</a>
-                <a href="{% url 'lista_historico' %}" class="nvbar-brand text-light"  style="text-decoration: none;">Consultas</a>
-                <a href="{% url 'cadastros_lista' %}" class="nvbar-brand text-light"  style="text-decoration: none;">Cadastros</a>
-                <a href="{% url 'listar_auditoria' %}" class="nvbar-brand text-light"  style="text-decoration: none;">Auditoria</a>
-                <a href="{% url 'logout' %}" class="nvbar-brand text-light"  style="text-decoration: none;">Sair</a>
-                </div>
-                </nav>
-        </div>
-        <div class="container">
-
-            <div class="body-content">
+                <a href="{% url 'evento_lista' %}" class="nvbar-brand text-light"
+                    style="text-decoration: none;">Eventos</a>
+                <a href="{% url 'lista_historico' %}" class="nvbar-brand text-light"
+                    style="text-decoration: none;">Consultas</a>
+                <a href="{% url 'cadastros_lista' %}" class="nvbar-brand text-light"
+                    style="text-decoration: none;">Cadastros</a>
+                <a href="{% url 'listar_auditoria' %}" class="nvbar-brand text-light"
+                    style="text-decoration: none;">Auditoria</a>
+                <a href="{% url 'logout' %}" class="nvbar-brand text-light" style="text-decoration: none;">Sair</a>
+            </div>
+        </nav>
+    </div>
+    <div class="container">
+        <div class="body-content">
             {% block content %}
-
             {% endblock %}
-             </div>
-
-             <!--
-<div class="copyright">
-             <footer>
-                                <p>&copy; 2024</p>
-                            </footer>
-
-             </div>
-          
-
-             -->
-             
-       
         </div>
-        
+    </div>
     </div>
 </body>
 
