Auditoria somente administradores

--- a/web_project/templates/web_project/base.html
+++ b/web_project/templates/web_project/base.html
@@ -30,7 +30,7 @@
                     style="text-decoration: none;">Consultas</a>
                 <a href="{% url 'cadastros_lista' %}" class="nvbar-brand text-light"
                     style="text-decoration: none;">Cadastros</a>
-                <a href="{% url 'listar_auditoria' %}" class="nvbar-brand text-light"
+                <a href="{% url 'acesso_negado' %}" class="nvbar-brand text-light"
                     style="text-decoration: none;">Auditoria</a>
                 <a href="{% url 'logout' %}" class="nvbar-brand text-light" style="text-decoration: none;">Sair</a>
             </div>
