--- a/web_project/templates/web_project/base.html
+++ b/web_project/templates/web_project/base.html
@@ -15,7 +15,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 </head>
 <body>
-    <div class="container mt-2">
+   <div>
         <nav class="navbar navbar-expand-lg navbar-light bg-secondary ">
             <div class="container-fluid">
                 <a href="{% url 'dashboard' %}" class="nvbar-brand text-light"
@@ -34,10 +34,11 @@
                 <a href="{% url 'logout' %}" class="nvbar-brand text-light" style="text-decoration: none;">Sair</a>
             </div>
         </nav>
-  
+        <div class="container mt-2">
         <div class="body-content">
             {% block content %}
             {% endblock %}
+        </div>
         </div>
     </div>
 </body>
