--- a/sol_app/templates/sol_app/sol_form.html
+++ b/sol_app/templates/sol_app/sol_form.html
@@ -15,14 +15,14 @@ Solicitação
       {% csrf_token %}
       {% crispy form %}
     </div>
-    
+  
+<div class="row">
+      <div class="col-12 text-center mt-3 mb-3">
+             <input class="btn btn-secondary" type="submit" value="Gravar" />
+      </div>
+    </div> 
   </div>
 </form>
-<div class="row">
-  <div class="col-12 text-center mt-3">
-      <input class="btn btn-secondary" type="submit" value="Gravar" />
-  </div>
-</div>
 <script>
   $(document).ready(function () {
     // Seleciona todos os campos de data renderizados pelo Crispy Forms
