Atualizado lista de evento: REfrência

--- a/evento_app/templates/evento_app/evento_lista.html
+++ b/evento_app/templates/evento_app/evento_lista.html
@@ -14,7 +14,7 @@ Lista de Eventos
                 <th>Documento</th>
                 <th>Responsável</th>
                 <th>Tipo</th>
-                <th>Solicitação</th>
+                <th>Referência</th>
                 <th colspan="3" class="text-center">Ação</th>
 
             </tr>
